# django-rules-light

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGELOG  MAINTENANCE.md  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
django_rules_light.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  make.bat  requirements.txt
docs/source/: class_decorator.rst  conf.py  debug.rst  decorator.rst  index.rst  logging.rst  middleware.rst  registry.rst  shortcuts.rst  testing.rst  tutorial.rst
rules_light/: __init__.py  apps.py  class_decorator.py  decorators.py  exceptions.py  middleware.py  registry.py  rules_light_registry.py  shortcuts.py  urls.py  views.py
rules_light/locale/el/LC_MESSAGES/: django.mo  django.po
rules_light/locale/fr/LC_MESSAGES/: django.mo  django.po
rules_light/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
rules_light/templates/rules_light/: exception.html  registry.html
rules_light/templatetags/: rules_light_tags.py
rules_light/tests/: __init__.py  autodiscover.py  class_decorator.py  class_decorator_classes.py  decorator.py  decorators.py  middleware.py  registry.py  rule_check.py  shortcuts.py  test_autodiscover.py  test_class_decorator.py  test_decorators.py  test_middleware.py  test_registry.py  test_shortcuts.py  test_views.py  views.py
rules_light/tests/fixtures/: class_decorator_classes.py
test_project/: auth_rules.py  db.sqlite  test_requirements_without_django.txt
test_project/templates/: _form.html  index.html  site_base.html
test_project/templates/auth/: new_user_list.html  user_detail.html  user_form.html  user_list.html
test_project/templates/registration/: login.html
test_project/test_project/: rules_logging.py  settings.py  urls.py
test_project/test_rule/: rules_light_registry.py
